轮播图修改

--- a/public/assets/css/draft.css
+++ b/public/assets/css/draft.css
@@ -111,3 +111,6 @@
 .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
   margin-top: -33px
 }
+.banner-box-right .slider .slider-dot ul{
+  left: 50%;
+}
