--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -180,6 +180,9 @@
 .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
   margin-top: -33px
 }
+.banner-box-right .slider .slider-dot ul{
+  left: 50%;
+}
 .report-btn {
   cursor: pointer;
 }
