--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -38,6 +38,9 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
         margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
     </style>
 </head>
 <body style="background:#f5f5f5;">
@@ -167,7 +170,7 @@
             intervalTime: 5000,
             slidesPerView: 2,
             slidesPerGroup: 2,
-//          pagination: true
+          pagination: true
         });
         //明星顾问轮播
         $('.advisor_star_bar .slider').xSlider();
