--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -152,7 +152,7 @@
           intervalTime: 5000,
           slidesPerView : 2,
           slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
       });
     window._bd_share_config={
       "common":{
