--- a/views/draft.html
+++ b/views/draft.html
@@ -134,7 +134,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
       console.log($.cookie('login_ss'))
       var login_ss = null; //获取用户信息
