--- a/views/release_article.html
+++ b/views/release_article.html
@@ -239,7 +239,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
       var city_id =null;
       if(login_ss.usertype ==2){
