--- a/views/so_article.html
+++ b/views/so_article.html
@@ -167,6 +167,9 @@
         color: #333;
         cursor: pointer;
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
@@ -262,7 +265,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
         var area = $.cookie('currentarea') ? $.cookie('currentarea') : 1;
         var keyword = $('#result-keyword').text();
