--- a/views/user_follow.html
+++ b/views/user_follow.html
@@ -36,6 +36,9 @@
     .slider .slider-dot ul{
         left:95%;
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
     .slider .slider-dot ul li{
         border-radius: 50%;
     }
@@ -137,7 +140,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
         /*分页器*/
         if (total_num >= 1) {
