--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -161,3 +161,6 @@
 .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
   margin-top: -33px
 }
+.banner-box-right .slider .slider-dot ul{
+  left: 50%;
+}
