--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -126,7 +126,7 @@
       intervalTime: 5000,
       slidesPerView: 2,
       slidesPerGroup: 2,
-//          pagination: true
+          pagination: true
     });
     //明星顾问轮播
     function appendArticleItem(aitem) {
