--- a/views/advisor_acount.html
+++ b/views/advisor_acount.html
@@ -78,6 +78,9 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
       margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+      left: 50%;
+    }
   </style>
 </head>
 <body style="background: #f5f5f5">
@@ -180,7 +183,7 @@
           intervalTime: 5000,
           slidesPerView : 2,
           slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
       });
     $("form").Vaild();
     var lS = document.getElementById('baocunSubmit');
