--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -43,6 +43,9 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
         margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
 
@@ -145,7 +148,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
       //让分页器居中显示
       $(".pagination-box").css({"marginLeft":"-"+$(".pagination-box").width()/2+"px"});
