--- a/views/center_follow.html
+++ b/views/center_follow.html
@@ -42,6 +42,9 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
         margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
 
@@ -144,7 +147,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
         if (total_num > 1) {
             /*分页器*/
