--- a/views/center_message.html
+++ b/views/center_message.html
@@ -22,6 +22,9 @@
         width:100%;
         height:100%;
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
 {% include "widget/top/top.html" %}
@@ -114,7 +117,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
       //让分页器居中显示
       $(".pagination-box").css({"marginLeft":"-"+$(".pagination-box").width()/2+"px"});
