--- a/views/center_photo.html
+++ b/views/center_photo.html
@@ -38,6 +38,9 @@
   .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
     margin-top: -33px
   }
+  .banner-box-right .slider .slider-dot ul{
+    left: 50%;
+  }
 </style>
 </head>
 <body style="background: #f5f5f5">
@@ -183,7 +186,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
         function to_album_add(advisor_id, arr) {
             $.ajax({
