--- a/views/center_post_code.html
+++ b/views/center_post_code.html
@@ -158,6 +158,9 @@
         .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
             margin-top: -33px
         }
+        .banner-box-right .slider .slider-dot ul{
+            left: 50%;
+        }
     </style>
 </head>
 <body style="background: #f5f5f5">
@@ -273,7 +276,7 @@
         intervalTime: 5000,
         slidesPerView : 2,
         slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
     });
     var login_ss = null;
     if($.cookie('login_ss') != undefined){
