--- a/views/user_information.html
+++ b/views/user_information.html
@@ -62,6 +62,9 @@
     .slider .slider-dot ul{
       left:95%;
     }
+    .banner-box-right .slider .slider-dot ul{
+      left: 50%;
+    }
     .slider .slider-dot ul li{
       border-radius: 50%;
     }
@@ -171,7 +174,7 @@
           intervalTime: 5000,
           slidesPerView : 2,
           slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
       });
     $("form").Vaild();
     var lS = document.getElementById('baocunSubmit');
