修改绑定手机号

--- a/views/login/binding.html
+++ b/views/login/binding.html
@@ -126,7 +126,7 @@
       dataType:'json',
       data: {
         phone: $('#newEmail').val(),
-        code: $('#verify').val(),
+        code: $('#verify_binding').val(),
         oauthid: $('#oauthid').val()
       },
       success:function(msg) {
