--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -114,7 +114,7 @@
     </div>
     <div class="adviser-info-date clearfix" >
       <span class="adviser-info-date-s" style="color: #666">{{item.add_time}}</span>
-      <span>来自：{{item.from}}</span>
+      <span>{{item.tag_list}}</span>
     </div>
     <div class="adviser-info-title">
       <a target="_blank" href="/{% if item.user_info.usertype == 2 %}advisor_center{% elif item.user_info.usertype == 3 %}canzan_center{% endif %}/article/{{item.id}}" style="color: #C13232">{{item.title}}</a>
@@ -192,7 +192,7 @@
     </div>
     <div class="adviser-info-date clearfix" >
       <span class="adviser-info-date-s" style="color: #666">{{item.add_time}}</span>
-      <span>来自：{{item.from}}</span>
+      <span>{{item.tag_list}}</span>
     </div>
     <div class="adviser-info-title">
       <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" style="color: #C13232">{{item.title}}</a>
