--- a/views/center_case.html
+++ b/views/center_case.html
@@ -112,7 +112,7 @@
                 {#{% import "widget2/offer/offer.html" as case_edit %}
                 {{ case_edit.case_edit(item, helper) }}#}
                 {% import "widget2/article/article.html" as article_show %}
-                {{ article_show.adviser_show(item, helper) }}
+                {{ article_show.article_edit(item, helper) }}
                 {% include "widget2/bottom_comment/bottom_comment.html" %}
                 </div>
                 {% endfor %}
