--- a/views/adviser_special.html
+++ b/views/adviser_special.html
@@ -178,7 +178,9 @@
           '<a  target="_blank" href="'+ fn.articleUrlgen("blog",aitem.uid.toString(),"case="+aitem.id.toString()) +'" class="dui-text-warning">'+
           addArticleImg(aitem.img_list)+
           '</a>'+
-          '<div style="float: left;width: 200px;line-height: 37px;position: absolute;left: 446px;margin-top: 11px;">'+aitem.add_time+'</div>'+
+          '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
+          '<div style="float: left;position: absolute;">'+aitem.add_time+'</div>'+
+          '</div>'+
           '</div>'+
           '</div>'+
           addBottom(aitem);
@@ -197,7 +199,7 @@
       if(imgList==undefined){
         return '';
       }
-      var html = '<ul>';
+      var html = '<ul class="homepage-li" style="float: left;">';
       for (var j=0; j<imgList.length; j++) {
         html += '<li style="margin-top: 14px"><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
       }
