--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -41,7 +41,7 @@
       {% endif %}
     </p>
   </div>
-  <ul class="homepage-li">
+  <ul class="homepage-li" style="float: left;margin-left: 20px">
     {% for val in item.img_list %}
     <li>
       {% if item.type == 1 %}
@@ -56,7 +56,9 @@
     </li>
     {% endfor %}
   </ul>
-  <div style="float: left;width: 200px;line-height: 45px;position: absolute;left: 446px;margin-top: 2px;">{{item.add_time}}</div>
+  <div style="width: 200px;line-height: 38px;float: left;position: relative">
+    <div style="float: left;position: absolute;left: 20px">{{item.add_time}}</div>
+  </div>
 </div>
 {% endmacro %}
 //顾问、个人中心
