--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 </div>
-{% import "widget/new_slide/new_slide2.html" as  slide %}
+{% import "widget/new_slide/new_slide3.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
@@ -88,7 +88,7 @@
 <!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
