--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -130,7 +130,7 @@
           {% esi helper.include(esikey,'fragment/community_guwen','n='+hcountry) %}
     </div>
 </div>
-{% import "widget/new_slide/new_slide2.html" as  slide %}
+{% import "widget/new_slide/new_slide3.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
 {% include "widget/new_footer/new_footer.html" %}
 <script>
@@ -143,7 +143,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
