--- a/views/widget/new_slide/new_slide.css
+++ b/views/widget/new_slide/new_slide.css
@@ -42,14 +42,14 @@
 }
 .quick_links_panel a{
   display: block;
-  line-height: 200px;
+  /*line-height: 200px;*/
   /*width: 40px;
   height: 38px;*/
   text-decoration: none;
   color: #d8d8d8;
   font-size:12px;
   overflow: hidden;
-  background-color: #3e3e3e;
+/*  background-color: #3e3e3e;*/
   position:relative;
   overflow: hidden;
   top: 0;
