--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -150,11 +150,9 @@
           '<div class="homepage-title">' +
           '<p>' ;
           if(aitem.type==1){
-            aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div>' + aitem.tag_list + '</div>' +
-                '</a>' ;
+            aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
           }else if(aitem.type==2){
-            aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div>' + aitem.tag_list + '</div>' +
-                '</a>' ;
+            aItemHtml+= '<a  target="_blank" href="' + fn.articleUrlgen("blog", aitem.uid.toString(), "article=" + aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
           }
           aItemHtml+=  '</p>' +
           '</div>' +
