--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -19,12 +19,11 @@
     <p>
     {% if item.type == 1 %}
     <a target="_blank" href="{{helper.urlgen('case', item.id | string)}}" class="dui-text-warning" rel="nofollow">
-      {{item.title}}" <div>{{item.tag_list}}</div>
-    </a>
+      {{item.title}}"</a><div>{{item.tag_list}}</div>
+
     {% elif item.type == 2 %}
     <a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}" class="dui-text-warning" rel="nofollow">
-      {{item.title}}" <div>{{item.tag_list}}</div>
-    </a>
+      {{item.title}}" </a><div>{{item.tag_list}}</div>
     {% endif %}
     </p>
   </div>
