--- a/views/widget2/guess_like/guess_like.html
+++ b/views/widget2/guess_like/guess_like.html
@@ -7,11 +7,11 @@
               <img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="" class="img-responsive">
             </a>
             <div class="likes-item" style="padding-top:12px;">
-              <span class="people-name" style="margin-right:35px;margin-top:0;">{{item.user_info.realname }}</span>
-              <span class="people-action" style="margin-top:0">{{item.tag_list | stringSub()}}</span>
+              <span class="people-name" style="margin-top:0;margin-right:0;">{{item.user_info.realname}}</span>
+              <span class="people-action" style="margin-top:0;float:right;">{{item.tag_list | stringSub()}}</span>
             </div>
             <a style="margin:20px 0 10px 0" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
-              <div class="article">{{item.title}}</div>
+              <div class="article">{{item.title | ellipsis(14) }}</div>
             </a>
         </li>
         {% endfor %}
