--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -7,10 +7,10 @@
 
       <div class="quick_links_panel">
         <ul>
-          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;">
+          <li class="on zixun message_list current" id="zxzx" style="background: #c13232;"  onclick="openchat_new('{{ user.job_number}}')">
 
             <img src="{{helper.cdnhost}}/assets/img/phone.gif" alt="立即咨询" class="quick-img">
-            <span><a style="font-size: 16px;color: #ffffff;" onclick="openchat_new('{{ user.job_number}}')">立即咨询</a></span>
+            <span><a style="font-size: 16px;color: #ffffff;">立即咨询</a></span>
           </li>
           <li class="on" id="r_comment">
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img">
