--- a/views/center_case.html
+++ b/views/center_case.html
@@ -66,11 +66,14 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
       margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+      left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
+  {{ new_nav_first.new_nav_first(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
@@ -112,7 +115,7 @@
                 {#{% import "widget2/offer/offer.html" as case_edit %}
                 {{ case_edit.case_edit(item, helper) }}#}
                 {% import "widget2/article/article.html" as article_show %}
-                {{ article_show.adviser_show(item, helper) }}
+                {{ article_show.article_edit(item, helper) }}
                 {% include "widget2/bottom_comment/bottom_comment.html" %}
                 </div>
                 {% endfor %}
@@ -166,7 +169,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
         function appendCase (caseArr) {
             var caseHtml = '';
