--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -38,6 +38,9 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
         margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+        left: 50%;
+    }
     </style>
 </head>
 <body style="background:#f5f5f5;">
@@ -45,7 +48,7 @@
 {% include "widget/top/top.html" %}
 <!-- ====导航===== -->
 {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(helper) }}
+{{ new_nav_red.new_nav_red(tdk,helper) }}
 <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
@@ -167,7 +170,7 @@
             intervalTime: 5000,
             slidesPerView: 2,
             slidesPerGroup: 2,
-//          pagination: true
+          pagination: true
         });
         //明星顾问轮播
         $('.advisor_star_bar .slider').xSlider();
