--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -94,6 +94,9 @@
   .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
     margin-top: -33px
   }
+  .banner-box-right .slider .slider-dot ul{
+    left: 50%;
+  }
 </style>
 </head>
 <body style="background: #f5f5f5">
@@ -101,7 +104,7 @@
 {% include "widget/top/top.html" %}
 
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(helper) }}
+{{ new_nav_first.new_nav_first(tdk,helper) }}
 
 <div class="dui-layout-lg clearfix banner-box">
   <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
@@ -153,6 +156,8 @@
   </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 <script>
   var login_ss = null; 
   if($.cookie('login_ss') != undefined){
@@ -160,6 +165,8 @@
   }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
@@ -184,7 +191,7 @@
           intervalTime: 5000,
           slidesPerView : 2,
           slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
       });
     $("#gerenjieshao").on("change",function(){
       this.value = this.value.substring(0, 500);
