--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -12,7 +12,7 @@
  {% include "widget/top/top.html" %}
  <!-- ====导航===== -->
  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
- {{ new_nav_red.new_nav_red(helper) }}
+ {{ new_nav_red.new_nav_red(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
@@ -150,7 +150,7 @@
           intervalTime: 5000,
           slidesPerView : 2,
           slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
       });
     window._bd_share_config={
           "common":{
