--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -69,11 +69,14 @@
     .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
       margin-top: -33px
     }
+    .banner-box-right .slider .slider-dot ul{
+      left: 50%;
+    }
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(helper) }}
+  {{ new_nav_first.new_nav_first(tdk,helper) }}
 
 	<!-- ==广告1== -->
   <div class="dui-layout-lg clearfix banner-box">
@@ -160,7 +163,7 @@
   <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script>
-    $(function() {
+    $(function () {
         $('.banner-box-left .slider').xSlider({
             //轮播图配置
 //          autoplay : 500,
@@ -178,8 +181,12 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
+    })
+  </script>
+  <script>
+    $(function() {
         function appendCaseItem (citem) {
             if(citem.introduce==undefined){
                   citem.introduce ={
