--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" type="text/css" href="{{helper.cdnhost}}/assets/css/index.css">
 <link rel="stylesheet" href="{{helper.cdnhost}}/dep/css/idangerous.swiper2.7.6.css" >
 <script src="{{helper.cdnhost}}/dep/js/idangerous.swiper2.7.6.js"></script>
+<style>
+  .xuanze-chengshi p a:last-child{
+    margin-right: 0;
+  }
+</style>
 <body>
 {% if iparea %}
 {% else %}
@@ -122,7 +127,7 @@
 </div>
 {% include "widget/top/top.html" %}
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-{{ new_nav_first.new_nav_first(helper) }}
+{{ new_nav_first.new_nav_first(tdk,helper) }}
 <div class="main" style="width: 1200px;margin: 0 auto;">
   <!--轮播图-->
   <div class="lunbo">
@@ -373,7 +378,7 @@
         e.preventDefault();
       }
       $.cookie('currentarea', currentarea, { path: "/",domain: '.jjlvip.cn'});
-      window.location.reload();
+      window.location.href= fn.urlgen('branch_home','c=' + currentarea);
 
     });
     //正确
