--- a/views/release_article.html
+++ b/views/release_article.html
@@ -13,7 +13,7 @@
 	{% include "widget/top/top.html" %}
 	<!-- ====导航===== -->
 	{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-  {{ new_nav_red.new_nav_red(helper) }}
+  {{ new_nav_red.new_nav_red(tdk,helper) }}
   <div class="dui-layout-lg clearfix banner-box">
     <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
     <div class="dui-layout-div"></div>
@@ -239,7 +239,7 @@
             intervalTime: 5000,
             slidesPerView : 2,
             slidesPerGroup : 2,
-//          pagination: true
+          pagination: true
         });
       var city_id =null;
       if(login_ss.usertype ==2){
