--- a/views/center_case.html
+++ b/views/center_case.html
@@ -247,7 +247,8 @@
                     u_id: uid,
                     type: 1,
                     page: page,
-                    per_page: per_page
+                    per_page: per_page,
+                    order:"add_time desc"
                 },
                 success: function (revmsg) {
                   console.log(revmsg);
