--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -137,7 +137,7 @@
       <div style="float: left">
         <div class="con"><span>姓名：{{userinfo.realname}}</span><i>所在分公司：{{ userinfo.organid | getCity() }}分公司</i></div>
         <div class="con"><span>所在部门：{{userinfo.dept}}</span><i>工号：{{userinfo.job_number}}</i></div>
-        <div class="con" style="margin-bottom: 0px">擅长国家：{{userinfo.skilful_country}}</div>
+        <!-- <div class="con" style="margin-bottom: 0px">擅长国家：{{userinfo.skilful_country}}</div> -->
       </div>
     </div>
 
