--- a/views/center_article.html
+++ b/views/center_article.html
@@ -180,7 +180,7 @@
               identity = 'canzan';
             }
             aItemHtml += '<div class="art-box clearfix" ><a target="_blank" href="'+ fn.curlgen(identity+"_center/article/" + aitem.id) +'"><div class="adviser-head" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 60px 76px;"></div></a>';
-            aItemHtml += '<div class="adviser-info" ><div class="adviser-info-name" >'+ aitem.user_info.realname +'</div><div class="adviser-info-date clearfix" ><span class="adviser-info-date-s">'+ aitem.add_time +'</span><span>来自：'+ aitem.from +'</span></div><div class="adviser-info-title">'+ aitem.title +'</div>';
+            aItemHtml += '<div class="adviser-info" ><div class="adviser-info-name" >'+ aitem.user_info.realname +'</div><div class="adviser-info-date clearfix" ><span class="adviser-info-date-s">'+ aitem.add_time +'</span><span>'+ aitem.tag_list +'</span></div><div class="adviser-info-title">'+ aitem.title +'</div>';
             aItemHtml += '<div class="offer-opt-bar clearfix"><div class="opt-btn red-border delete"  onclick="deleteOffer($(this), '+aitem.uid+',' +aitem.id+')"><i class="iconfont">&#xe8c1;</i><span>删除</span></div><div class="opt-btn edit"><i class="iconfont">&#xe61c;</i><a target="_blank" href="'+  fn.curlgen("advisor_center/postarticle/" + aitem.id)+'">编辑</a></div></div>';
             aItemHtml += '<div class="offer-xialas"><span class="offer-xialadd iconfont">&#xe60b;</span><ul class="offer-xiala"><li><a  class="dui-text-warning-s report-btn" data-artId="'+aitem.id+'" data-catid="'+aitem.category_id+'">举报</a></li><li><a  class="dui-text-warning-s share-btn" data-url="'+fn.urlgen('article',aitem.id.toString())+'" data-title ="'+aitem.title+'">分享</a></li></ul></div>';
             aItemHtml += ' <p class="adviser-info-p"><a target="_blank" href="'+ fn.curlgen(identity+"_center/article/" + aitem.id) +'" class="dui-text-warning">'+ aitem.introduce +'<span>【查看详情】</span></a></p>';
@@ -212,7 +212,7 @@
             var per_page = 4;
             var thisObj = $(this);
             $.ajax({
-                url: '/soapi/article_list',
+                url: '/soapi/advisor_list',
                 type: 'GET',
                 datatype: 'json',
                 data: {
