--- a/views/edit_article.html
+++ b/views/edit_article.html
@@ -240,7 +240,12 @@
       }); 
       //选择文章类型
       var newsletterType = $("#art-type").attr('data-id');
-      // console.log(newsletterType)
+      var newTagStr = '';
+      if(newsletterType ==2){
+        newTagStr = '留学时讯';
+      }else{
+        newTagStr ='';
+      }
       $(".art-type-sel").on("click",function(){
         newsletterType = $(this).attr('data-id');
         $('.art-type-i').html('').css({'border':'1px solid #333','color':'none','marginRight':'5px','fontSize':'14px'});
@@ -249,8 +254,10 @@
         $(this).find('.art-type-i').next().css({'color':'#c13232'});
         if($(this).index()==2){
           $('.newsletter-hide').slideDown();
+          newTagStr = '';
         }else{
           $('.newsletter-hide').slideUp();
+          newTagStr = '留学时讯';
         }
       });
        //选择学历标签
@@ -371,8 +378,7 @@
             layer.msg('请选择推荐标签');
             return false;
           }
-          var newTagStr =tagStr.substring(0,tagStr.length-1);
-          // console.log(newTagStr)
+          newTagStr =tagStr.substring(0,tagStr.length-1);
         }
 
         if($("#rel-case-title").val()==''){
@@ -444,7 +450,6 @@
             return false;
           }
           var eduStr = eduList.substring(0,eduList.length-1);
-          // console.log(eduStr)
           //判断标签
           var tagStr = '';
           $('.recommend-sel[checked=checked]').each(function(){
@@ -457,8 +462,7 @@
             layer.msg('请选择推荐标签');
             return false;
           }
-          var newTagStr =tagStr.substring(0,tagStr.length-1);
-          // console.log(newTagStr)
+          newTagStr =tagStr.substring(0,tagStr.length-1);
         }
 
         if($("#rel-case-title").val()==''){
