--- a/views/widget/new_slide/new_slide.html
+++ b/views/widget/new_slide/new_slide.html
@@ -35,7 +35,7 @@
   </div>
 </div>
 <div id="quick_links_pop" class="quick_links_pop quick_message_list"
-     style="right: 40px; margin-top: -300px; display: block; width: 170px;z-index:1002;">
+     style="margin-right: 20px; margin-top: -300px; display: block; width: 170px;z-index:1002;">
   <a href="javascript:void(0);" class="ibar_closebtn" title="关闭">×</a>
   <div>
     <ul id="lylist">
