--- a/views/center_case.html
+++ b/views/center_case.html
@@ -125,7 +125,7 @@
                 <i class="iconfont">&#xe60b;</i>
             </div>
             {% else %}
-            <div style="width: 100%; height: 400px;text-align: center;line-height: 400px;font-size: 30px;">您还未发布案例,快去<a target="_blank" href="{{helper.urlgen('advisor_center', 'postcase')}}">发布案例</a>发布吧！</div>
+            <div style="width: 100%; height: 400px;text-align: center;line-height: 400px;font-size: 30px;">您还未发布案例,快去<a target="_blank" href="{{helper.urlgen('advisor_center', 'postarticle')}}">发布案例</a>发布吧！</div>
             {% endif %}
         </div>
     </div>
