--- a/views/widget/new_slide/new_slide2.html
+++ b/views/widget/new_slide/new_slide2.html
@@ -62,13 +62,13 @@
     </div>
   </div>
 </div>
-<div id="quick_links_pop" class="quick_links_pop quick_message_list"
-     style="right: 40px; margin-top: -300px; display: block; width: 170px;z-index:1002;">
+{#<div id="quick_links_pop" class="quick_links_pop quick_message_list"
+     style="right: 40px; margin-top: -344px; display: block; width: 170px;z-index:1002;">
   <a href="javascript:void(0);" class="ibar_closebtn" title="关闭">×</a>
   <div>
     <ul id="lylist">
 
     </ul>
   </div>
-</div>
+</div>#}
 {% endmacro %}
