案例专栏加载更多

--- a/views/center_case.html
+++ b/views/center_case.html
@@ -225,7 +225,7 @@
                 type: 'GET',
                 datatype: 'json',
                 data: {
-                    u_id: uid,
+                    uid: uid,
                     type: 1,
                     page: page,
                     per_page: per_page,
