--- a/views/center_article.html
+++ b/views/center_article.html
@@ -216,7 +216,7 @@
                 type: 'GET',
                 datatype: 'json',
                 data: {
-                    u_id: uid,
+                    uid: uid,
                     type: 2,
                     page: page,
                     per_page: per_page,
