--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -118,8 +118,8 @@
     </div>
   </div>
 </div>
-{% import "widget/slide/slide.html" as  slide %}
-{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
+  {% import "widget/new_slide/new_slide3.html" as  slide %}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10",userinfo) }}
 {% include 'widget/new_footer/new_footer.html' %}
   <div>
     <input type="hidden" id="detail_id" value="{{id}}"/>
@@ -134,7 +134,7 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
