--- a/views/center_collection.html
+++ b/views/center_collection.html
@@ -75,8 +75,8 @@
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
-  {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
-  {{ new_nav_first.new_nav_first(tdk,helper) }}
+  {% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+  {{ new_nav_red.new_nav_red(tdk,helper) }}
 
 	<!-- ==广告1== -->
   <div class="dui-layout-lg clearfix banner-box">
