--- a/views/widget/advisor_star/advisor_star_cell.html
+++ b/views/widget/advisor_star/advisor_star_cell.html
@@ -30,7 +30,7 @@
 </div>
 {% endmacro %}
 <!--相关顾问侧栏五个-->
-{% macro advisor_starblock(xiangguan_guwen) %}
+{% macro advisor_starblock(xiangguan_guwen,helper) %}
 <ul class="gw-list">
     {% for gw_item in xiangguan_guwen %}
         <li>
