--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -79,7 +79,7 @@
 .nationality_guoqi{
     /*display: flex;*/
     width: 1154px;
-    height: 194px;
+    height: 141px;
     border: 3px solid #c13232;
     background: #f1f4f6;
     padding: 0 20px;
@@ -99,11 +99,11 @@
     color:#333 ;
     font-size: 12px;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .liuxue-guoqi a{
     width: auto;
-    margin: 20px 54px 47px 0;
+    margin: 10px 54px 25px 0;
     height:30px;
     display:block;
     float: left;
@@ -118,13 +118,13 @@
     color: #c13232;
     font-size: 16px;
     text-align: center;
-    line-height: 30px;
-    border-radius: 15px;
+    line-height: 24px;
+    /* border-radius: 15px; */
     /*margin: 0 auto;*/
     /*margin-top: -3px;*/
     /*z-index: 999999;*/
     background: #f1f4f6;
-    bottom: -32px;
+    bottom: -36px;
     left: 50%;
     margin-left: -77px;
 }
