--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -21,14 +21,7 @@
 .gw-legend{float:right;margin-top:18px;background:#f9f6f1;color:#c13232;font-size:12px}
 .gw-news{width:76px;height:20px;-webkit-border-radius:10px;border-radius:10px;background-color:#ff8547;color:#fff;text-align:center;line-height:20px}
 .gw-people .bg-peopel{float:left;height: 51px; 
-	width: 51px;
-	border-radius: 50%;
-	-webkit-border-radius:50%;
-	/* background-size: cover;
-	-webkit-background-size:cover;
-	background-position:0 0;
-	background-repeat: no-repeat; */
- }
+	width: 51px;border-radius: 50%;-webkit-border-radius:50%;}
 </style>
 {% for floor in shouye %} {#国家#}
 <div class="lxContaniner" style="overflow:hidden" data-id="country{{floor.country_id}}">
@@ -53,12 +46,10 @@
 					{% if item.uid != null %}
 					<li>
 						<div class="gw-people">
-							<a href="{{helper.articleUrlgen('blog',item.uid | string)}}" class="bg-peopel" style="background:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}) no-repeat 0 0;background-size: cover;">
-								<!-- <img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt=""> -->
-							</a>
+							<a target="_blank" href="{{helper.articleUrlgen('blog',item.uid | string)}}" class="bg-peopel" style="background:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}) no-repeat 0 -5px;background-size: cover;"></a>
 							<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
 						</div>
-						<a href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+						<a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
 							<div class="gw-legend gw-news">留学时讯</div>
 							<p style="clear:both">{{ item.title | ellipsis(13) }}</p>
 						</a>
@@ -73,12 +64,12 @@
 							{% if item.uid != null %}
 							<li class="gw-newslist">
 								<div class="gw-people">
-									<a href="{{helper.articleUrlgen('blog',item.uid|string)}}" class="bg-peopel" style="background:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}) no-repeat 0 0;background-size: cover;">
+									<a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string)}}" class="bg-peopel" style="background:url({{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}) no-repeat 0 -5px;background-size: cover;">
 										<!-- <img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt=""> -->
 									</a>
 									<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
 								</div>
-								<a href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
+								<a target="_blank" href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
 									<div class="gw-legend">{{item.tag_list}}</div>
 									<p style="clear:both">{{item.title | ellipsis(13)}}</p>
 								</a>
