解决国家通栏无法跳转

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -25,7 +25,7 @@
 
 </style>
 {% for floor in shouye %} {#国家#}
-<div class="lxContaniner" style="overflow:hidden" data-id="country{{floor.country_id}}">
+<div class="lxContaniner" style="overflow:hidden" id="country{{floor.country_id}}">
 	<div class="lx-head">
 		<h1>{{floor.country_name}}留学</h1>
 		<ul class="lx-tabitems">
