--- a/views/center_main.html
+++ b/views/center_main.html
@@ -183,7 +183,7 @@
     </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
-{% import "widget/new_slide/new_slide.html" as  slide %}
+{% import "widget/new_slide/new_slide2.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 <div id="photoDialog" style="display: none;"><!---->
     <!--上传pop-->
@@ -210,7 +210,7 @@
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
-<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/slide2.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
