修改字体样式

--- a/views/widget2/comment/comment.html
+++ b/views/widget2/comment/comment.html
@@ -3,7 +3,7 @@
   <textarea class="saytext1 saytext" id="saytext"  maxlength="500"></textarea>
   <div class="sub-btn-box clearfix emotion-box">
     <span class="emotion"></span>
-    <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-consult_ylw sub-btn" data-artId = "{{article_id}}" data-memberId ="{{memberId}}" id="commentBtn" data-catid="{{article.article_info.category_id}}">
+    <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-consult_ylw sub-btn" data-artId = "{{article_id}}" data-memberId ="{{memberId}}" id="commentBtn" data-catid="{{article.article_info.category_id}}" style="border-radius: 0;">
        评论
     </a>
   </div>
