--- a/views/widget/new_footer/new_footer.html
+++ b/views/widget/new_footer/new_footer.html
@@ -18,7 +18,7 @@
       <div class="sitemap sitemap02">
         <h2>专家团队</h2>
         <ul>
-          <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('canzan') }}">25位留学消费教育<br/>特约专家</a></li>
+          <li style="width: 312px;"><a target="_blank"  rel="nofollow"   href="{{ helper.urlgen('canzan') }}">25位留学消费教育特约专家</a></li>
         </ul>
       </div>
 
