修改发布文章发布成功连接

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -456,7 +456,9 @@
             	layer.msg('发布成功')
               if(login_ss.usertype == 2){
                 window.setTimeout(function(){
-                  window.location.href=fn.urlgen('advisor_center');
+                  // 'blog',item.uid|string,'article='+item.id | string)
+                  newWin(fn.articleUrlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()),'blog');
+                  // window.open(fn.urlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()));
                 },1000);
               }
             }else if(result.code == '1210000011'){
@@ -579,6 +581,18 @@
           }
         });
       });
+      function newWin(url, id) {
+        console.log(1000)
+        var a = document.createElement('a');
+        a.setAttribute('href', url);
+        a.setAttribute('target', '_blank');
+        a.setAttribute('id', id);
+        // 防止反复添加
+        if(!document.getElementById(id)) {                     
+            document.body.appendChild(a);
+        }
+        a.click();
+    }
     })
  </script>
 </body>
