--- a/views/release_article.html
+++ b/views/release_article.html
@@ -450,6 +450,7 @@
             is_immi:login_ss.adviser
           },
           dataType:'json',
+          async: false,
           success:function(result){
             console.log(result)
             if(result.code == 0){
@@ -457,8 +458,8 @@
               if(login_ss.usertype == 2){
                 window.setTimeout(function(){
                   // 'blog',item.uid|string,'article='+item.id | string)
-                  newWin(fn.articleUrlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()),'blog');
-                  // window.open(fn.urlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()));
+                  // newWin(fn.articleUrlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()),'blog');
+                  window.open(fn.urlgen('blog',login_ss.uid.toString(),'article='+result.data.article_id.toString()));
                 },1000);
               }
             }else if(result.code == '1210000011'){
